--- a/app/src/main/res/layout/controller_home.xml
+++ b/app/src/main/res/layout/controller_home.xml
@@ -5,8 +5,8 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="welcome to home controller" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
